<resources>
    <string name="app_name">Task Manager</string>
    <string name="action_filter">Filter</string>
    <string name="action_sort">Sort</string>
    <string name="task_loading_error">Couldn\'t load tasks!</string>
    <string name="task_list_empty_message">Seems that your task list is empty.</string>
    <string name="task_item_due_date_format_string">Due Date: %s</string>
    <string name="task_state_new">New</string>
    <string name="task_state_in_progress">In Progress</string>
    <string name="task_state_done">Done</string>
    <string name="task_progress_format_string">%d%% Completed</string>
    <string name="input_title_label">Title</string>
    <string name="input_description_label">Description</string>
    <string name="input_due_date_label">Due Date</string>
    <string name="input_estimated_time_label">Estimated Time</string>
    <string name="edit_task_invalid_input_message">Blank fields are not allowed</string>
    <string name="estimated_time_format_string">%1$dh %2$dm</string>
    <string name="details_start_date_format_string">Created at %s</string>
    <string name="details_due_date_format_string">Due date: %s</string>
    <string name="details_estimated_time_format_string">Estimated Time: %s</string>
    <string name="detail_task_load_error">Could\'t load the task</string>
    <string name="edit_task_not_found_message">Task not found</string>
    <string name="filter_all">All</string>
    <string name="filter_new">@string/task_state_new</string>
    <string name="filter_in_progress">@string/task_state_in_progress</string>
    <string name="filter_done">@string/task_state_done</string>
    <string name="sort_start_date">Start Date</string>
    <string name="sort_progress">Progress</string>
    <string name="sort_due_date">Due Date</string>
</resources>
