<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/input_bottom_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_title_label"
                style="@style/text_input_field_style" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/input_bottom_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_description_label"
                style="@style/text_input_field_style" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/input_bottom_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_due_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_due_date_label"
                style="@style/date_time_input_style" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/input_bottom_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_estimated_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_estimated_time_label"
                style="@style/date_time_input_style" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
